--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,54 @@
-name: "JFrog Integration Example"
-on: push
+name: Playwright and Java Tests
+
+on:
+  push:
+    branches:
+      - main  # or your preferred branch
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    
+
     steps:
-      # Checkout the repository
-      - name: Checkout
-        uses: actions/checkout@v3
-        
-      # Setup JFrog CLI for communication with JFrog Artifactory
-      - name: Setup JFrog CLI
-        uses: jfrog/setup-jfrog-cli@v3
-        env:
-          JF_URL: ${{ secrets.JF_URL }}
-          JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
-        
-      # Setup Node.js for the project
-      - name: Setup Node npm
-        uses: actions/setup-node@v3
-        
-      # Configure JFrog for npm repositories
-      - name: Set CLI Config
-        run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
-        
-      # Install project dependencies using npm and JFrog CLI
-      - name: Install Deps
-        run: jf npm install
-        
-      # Build the project
-      - name: Build Project
-        run: npm run build
-        
-      # Get current timestamp to use in file names
-      - name: Get Current Timestamp
-        id: vars
-        run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-        
-      # Archive the build directory into a .tgz file with a timestamp
-      - name: Archive Artifacts into TGZ with Timestamp
-        run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
-        
-      # Push the compressed .tgz file to JFrog Artifactory
-      - name: Push Artifacts to JFrog
-        run: |
-          # Upload the .tgz file with timestamp to JFrog Artifactory
-          jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
-        
-      # Publish the npm package to JFrog Artifactory
-      - name: Publish
-        run: jf npm publish
-        
-      # Publish build information to JFrog
-      - name: Publish Build info With JFrog CLI
-        run: |
-          # Collect environment variables for the build
-          jf rt build-collect-env
-          # Collect VCS details from git and add them to the build
-          jf rt build-add-git
-          # Publish build info
-          jf rt build-publish
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Ensure you are using the latest v3
+
+      # Step 1: Set up Java
+      - name: Set up Java
+        uses: actions/setup-java@v3  # Ensure you're using the latest v3
+        with:
+          distribution: 'temurin'  # Use Eclipse Temurin distribution (formerly AdoptOpenJDK)
+          java-version: '17'  # Specify the Java version (e.g., 17 for modern LTS)
+
+      - name: Verify Java version
+        run: java -version  # Optional: Check installed Java version
+
+      # Step 2: Set up Node.js after Java
+      - name: Set up Node.js
+        uses: actions/setup-node@v3  # Ensure you are using the latest v3
+        with:
+          node-version: '20.x'  # Specify Node.js version 20.x
+
+      # Step 3: Install project dependencies and run Playwright tests
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright Tests
+        run: npx playwright test --reporter=html
+
+      # Step 4: List and upload the test report
+      - name: List report directory
+        run: ls -R playwright-report  # List all files recursively in the report directory
+
+      - name: Upload Playwright HTML Report
+        if: always()  # Upload the report regardless of test outcomes
+        uses: actions/upload-artifact@v4  # Updated to v4
+        with:
+          name: playwright-report
+          path: playwright-report  # Folder where Playwright stores the HTML report
