--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,13 @@ jobs:
           npm start &  # Run server in background
           echo $! > server.pid  # Save the process ID (PID) for later termination
 
-      # Step 6: Run Playwright Tests (allow pipeline to continue even if tests fail)
+      # Step 6: Run Playwright Tests
       - name: Run Playwright Tests
-        run: npx playwright test --reporter=html
-        continue-on-error: true  # Don't fail the pipeline if the tests fail
+        run: |
+          set +e  # Allow script to continue even if tests fail
+          npx playwright test --reporter=html
+          echo "TEST_RESULT=$?" >> $GITHUB_ENV  # Store the exit code (0=pass, non-zero=fail)
+        continue-on-error: true  # Don't fail the pipeline if tests fail
 
       # Step 7: Stop the server
       - name: Stop server
@@ -45,7 +48,7 @@ jobs:
           kill $(cat server.pid)  # Kill the server using the saved PID
           rm server.pid  # Clean up the PID file
 
-      # Step 8: Always upload the Playwright HTML report
+      # Step 8: Upload Playwright HTML Report (always upload report)
       - name: Upload Playwright HTML Report
         if: always()  # Upload the report regardless of test outcomes
         uses: actions/upload-artifact@v4
@@ -53,64 +56,59 @@ jobs:
           name: playwright-report
           path: playwright-report
 
-  jfrog:
+  build:
     runs-on: ubuntu-latest
-    needs: test  # Ensure this job runs only after the test job
+    needs: test  # Ensure this job runs after the test job
 
-    if: success()  # Only run JFrog steps if the previous job (test) succeeded
     steps:
-      # Checkout the repository
-      - name: Checkout
-        uses: actions/checkout@v3
-        
-      # Setup JFrog CLI for communication with JFrog Artifactory
+      # Step 9: Message step based on the test result
+      - name: Check test result and report status
+        run: |
+          if [ "${{ env.TEST_RESULT }}" -eq 0 ]; then
+            echo "Playwright tests passed, proceeding with the build."
+          else
+            echo "Playwright tests failed, skipping the build."
+            exit 0  # Exit successfully but skip the rest of the steps
+          fi
+
+      # Step 10: Build the project only if the tests passed
+      - name: Build Project
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        run: npm run build
+
+      # Step 11: Continue with JFrog integration only if tests passed
       - name: Setup JFrog CLI
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
         uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: ${{ secrets.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
-      # Setup Node.js for the project
-      - name: Setup Node npm
-        uses: actions/setup-node@v3
-
-      # Configure JFrog for npm repositories
       - name: Set CLI Config
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
         run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
 
-      # Install project dependencies using npm and JFrog CLI
-      - name: Install Deps
+      - name: Install Deps using JFrog CLI
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
         run: jf npm install
 
-      # Build the project
-      - name: Build Project
-        run: npm run build
-
-      # Get current timestamp to use in file names
-      - name: Get Current Timestamp
-        id: vars
-        run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-
-      # Archive the build directory into a .tgz file with a timestamp
       - name: Archive Artifacts into TGZ with Timestamp
-        run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
-
-      # Push the compressed .tgz file to JFrog Artifactory
-      - name: Push Artifacts to JFrog
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
         run: |
-          # Upload the .tgz file with timestamp to JFrog Artifactory
-          jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
+          TIMESTAMP=$(date +'%Y%m%d%H%M%S')
+          tar -czf build_${TIMESTAMP}.tgz build/
 
-      # Publish the npm package to JFrog Artifactory
-      - name: Publish
+      - name: Push Artifacts to JFrog
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        run: jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
+
+      - name: Publish the npm package to JFrog Artifactory
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
         run: jf npm publish
 
-      # Publish build information to JFrog
-      - name: Publish Build info With JFrog CLI
+      - name: Publish Build Info with JFrog CLI
+        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
         run: |
-          # Collect environment variables for the build
           jf rt build-collect-env
-          # Collect VCS details from git and add them to the build
           jf rt build-add-git
-          # Publish build info
           jf rt build-publish
