--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       # Step 5: Start the server
       - name: Start the server
         run: |
-          npm start &  # Run server in background
+          npm start &  # Run the server in the background
           echo $! > server.pid  # Save the process ID (PID) for later termination
 
       # Step 6: Run Playwright Tests
@@ -40,15 +40,15 @@ jobs:
           set +e  # Allow script to continue even if tests fail
           npx playwright test --reporter=html
           echo "TEST_RESULT=$?" >> $GITHUB_ENV  # Store the exit code (0=pass, non-zero=fail)
-        continue-on-error: true  # Don't fail the pipeline if tests fail
+        continue-on-error: true  # Continue even if tests fail
 
       # Step 7: Stop the server
-      - name: Stop server
+      - name: Stop the server
         run: |
           kill $(cat server.pid)  # Kill the server using the saved PID
           rm server.pid  # Clean up the PID file
 
-      # Step 8: Upload Playwright HTML Report (always upload report)
+      # Step 8: Upload Playwright HTML Report
       - name: Upload Playwright HTML Report
         if: always()  # Upload the report regardless of test outcomes
         uses: actions/upload-artifact@v4
@@ -58,56 +58,62 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test  # Ensure this job runs after the test job
+    needs: test  # This ensures the build runs only after the test job
 
     steps:
-      # Step 9: Message step based on the test result
+      # Step 9: Check test result and conditionally proceed
       - name: Check test result and report status
         run: |
           if [ "${{ env.TEST_RESULT }}" -eq 0 ]; then
             echo "Playwright tests passed, proceeding with the build."
-          else
+          else:
             echo "Playwright tests failed, skipping the build."
             exit 0  # Exit successfully but skip the rest of the steps
           fi
 
-      # Step 10: Build the project only if the tests passed
+      # Step 10: Build the project if tests passed
       - name: Build Project
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        if: ${{ env.TEST_RESULT == 0 }}
         run: npm run build
 
-      # Step 11: Continue with JFrog integration only if tests passed
+      # Step 11: Setup JFrog CLI for npm repositories
       - name: Setup JFrog CLI
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        if: ${{ env.TEST_RESULT == 0 }}
         uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: ${{ secrets.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
+      # Step 12: Set CLI Config for JFrog npm repositories
       - name: Set CLI Config
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        if: ${{ env.TEST_RESULT == 0 }}
         run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
 
+      # Step 13: Install dependencies using JFrog CLI
       - name: Install Deps using JFrog CLI
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        if: ${{ env.TEST_RESULT == 0 }}
         run: jf npm install
 
+      # Step 14: Archive Artifacts into TGZ with Timestamp
       - name: Archive Artifacts into TGZ with Timestamp
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        if: ${{ env.TEST_RESULT == 0 }}
         run: |
           TIMESTAMP=$(date +'%Y%m%d%H%M%S')
           tar -czf build_${TIMESTAMP}.tgz build/
 
+      # Step 15: Push Artifacts to JFrog
       - name: Push Artifacts to JFrog
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        if: ${{ env.TEST_RESULT == 0 }}
         run: jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
 
-      - name: Publish the npm package to JFrog Artifactory
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+      # Step 16: Publish the npm package to JFrog Artifactory
+      - name: Publish npm package
+        if: ${{ env.TEST_RESULT == 0 }}
         run: jf npm publish
 
+      # Step 17: Publish Build Info with JFrog CLI
       - name: Publish Build Info with JFrog CLI
-        if: ${{ env.TEST_RESULT == 0 }}  # Run only if tests passed
+        if: ${{ env.TEST_RESULT == 0 }}
         run: |
           jf rt build-collect-env
           jf rt build-add-git
