--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,54 +75,57 @@ jobs:
             exit 0  # Exit successfully but skip the rest of the steps
           fi
 
-      # Step 3: Set up Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
-
-      # Step 4: Install project dependencies using npm and JFrog CLI
-      - name: Install Deps using JFrog CLI
-        run: jf npm install
-
-      # Step 5: Build the project if tests passed
-      - name: Build Project
-        if: ${{ env.TEST_RESULT == 0 }}
-        run: npm run build
-
-      # Step 6: Setup JFrog CLI for npm repositories
+      # Step 3: Setup JFrog CLI for communication with JFrog Artifactory
       - name: Setup JFrog CLI
-        if: ${{ env.TEST_RESULT == 0 }}
         uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: ${{ secrets.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
-      # Step 7: Set CLI Config for JFrog npm repositories
+      # Step 4: Setup Node.js for the project
+      - name: Setup Node npm
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+
+      # Step 5: Configure JFrog for npm repositories
       - name: Set CLI Config
-        if: ${{ env.TEST_RESULT == 0 }}
         run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
 
-      # Step 8: Archive Artifacts into TGZ with Timestamp
+      # Step 6: Install project dependencies using npm and JFrog CLI
+      - name: Install Deps using JFrog CLI
+        run: jf npm install
+
+      # Step 7: Build the project
+      - name: Build Project
+        if: ${{ env.TEST_RESULT == 0 }}  # Only run if tests passed
+        run: npm run build
+
+      # Step 8: Get current timestamp to use in file names
+      - name: Get Current Timestamp
+        if: ${{ env.TEST_RESULT == 0 }}  # Only run if tests passed
+        id: vars
+        run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+
+      # Step 9: Archive the build directory into a .tgz file with a timestamp
       - name: Archive Artifacts into TGZ with Timestamp
-        if: ${{ env.TEST_RESULT == 0 }}
-        run: |
-          TIMESTAMP=$(date +'%Y%m%d%H%M%S')
-          tar -czf build_${TIMESTAMP}.tgz build/
+        if: ${{ env.TEST_RESULT == 0 }}  # Only run if tests passed
+        run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
 
-      # Step 9: Push Artifacts to JFrog
+      # Step 10: Push the compressed .tgz file to JFrog Artifactory
       - name: Push Artifacts to JFrog
-        if: ${{ env.TEST_RESULT == 0 }}
-        run: jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
+        if: ${{ env.TEST_RESULT == 0 }}  # Only run if tests passed
+        run: |
+          jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
 
-      # Step 10: Publish the npm package to JFrog Artifactory
+      # Step 11: Publish the npm package to JFrog Artifactory
       - name: Publish npm package
-        if: ${{ env.TEST_RESULT == 0 }}
+        if: ${{ env.TEST_RESULT == 0 }}  # Only run if tests passed
         run: jf npm publish
 
-      # Step 11: Publish Build Info with JFrog CLI
-      - name: Publish Build Info with JFrog CLI
-        if: ${{ env.TEST_RESULT == 0 }}
+      # Step 12: Publish build information to JFrog
+      - name: Publish Build info With JFrog CLI
+        if: ${{ env.TEST_RESULT == 0 }}  # Only run if tests passed
         run: |
           jf rt build-collect-env
           jf rt build-add-git
