--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -56,55 +56,65 @@ jobs:
           name: playwright-report
           path: playwright-report
 
-      # Step 9: Check test result and report status
+  build:
+    runs-on: ubuntu-latest
+    needs: test  # This job depends on the test job
+
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # Step 2: Check test result and report status
       - name: Check test result and report status
         run: |
           if [ "${{ env.TEST_RESULT }}" -eq 0 ]; then
             echo "Playwright tests passed, proceeding with the build."
-
-            # Step 10: Setup JFrog CLI for communication with JFrog Artifactory
-            echo "Setting up JFrog CLI..."
-            echo "JF_URL=${{ secrets.JF_URL }}" > jfrog.config
-            echo "JF_ACCESS_TOKEN=${{ secrets.JF_ACCESS_TOKEN }}" >> jfrog.config
-            jfrog config add --interactive=false jfrog.config
-
-            # Step 11: Configure JFrog for npm repositories
-            echo "Configuring JFrog CLI..."
-            run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
-
-            # Step 12: Install project dependencies using npm and JFrog CLI
-            echo "Installing project dependencies..."
-            run: jf npm install
-
-            # Step 13: Build the project
-            echo "Building the project..."
-            run: npm run build
-
-            # Step 14: Get current timestamp to use in file names
-            echo "Getting current timestamp..."
-            id: vars
-            run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-
-            # Step 15: Archive the build directory into a .tgz file with a timestamp
-            echo "Archiving build artifacts..."
-            run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
-
-            # Step 16: Push the compressed .tgz file to JFrog Artifactory
-            echo "Pushing artifacts to JFrog..."
-            run: |
-              jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
-
-            # Step 17: Publish the npm package to JFrog Artifactory
-            echo "Publishing npm package..."
-            run: jf npm publish
-
-            # Step 18: Publish build information to JFrog
-            echo "Publishing build info..."
-            run: |
-              jf rt build-collect-env
-              jf rt build-add-git
-              jf rt build-publish
           else
             echo "Playwright tests failed, skipping the build."
             exit 0  # Exit successfully but skip the rest of the steps
           fi
+
+      # Step 3: Setup JFrog CLI for communication with JFrog Artifactory
+      - name: Setup JFrog CLI
+        uses: jfrog/setup-jfrog-cli@v3
+        env:
+          JF_URL: ${{ secrets.JF_URL }}
+          JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
+
+      # Step 4: Configure JFrog for npm repositories
+      - name: Set CLI Config
+        run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
+
+      # Step 5: Install project dependencies using npm and JFrog CLI
+      - name: Install Deps using JFrog CLI
+        run: jf npm install
+
+      # Step 6: Build the project
+      - name: Build Project
+        run: npm run build
+
+      # Step 7: Get current timestamp to use in file names
+      - name: Get Current Timestamp
+        id: vars
+        run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+
+      # Step 8: Archive the build directory into a .tgz file with a timestamp
+      - name: Archive Artifacts into TGZ with Timestamp
+        run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
+
+      # Step 9: Push the compressed .tgz file to JFrog Artifactory
+      - name: Push Artifacts to JFrog
+        run: |
+          jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
+
+      # Step 10: Publish the npm package to JFrog Artifactory
+      - name: Publish npm package
+        run: jf npm publish
+
+      # Step 11: Publish build information to JFrog
+      - name: Publish Build info With JFrog CLI
+        run: |
+          jf rt build-collect-env
+          jf rt build-add-git
+          jf rt build-publish
