--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: "Playwright and JFrog Integration"
 
 on:
@@ -6,7 +7,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,7 +34,6 @@ jobs:
         run: |
           npm start &  # Run the server in the background
           echo $! > server.pid  # Save the process ID (PID) for later termination
-
       # Step 6: Run Playwright Tests
       - name: Run Playwright Tests
         run: |
@@ -47,55 +47,69 @@ jobs:
         run: |
           kill $(cat server.pid)  # Kill the server using the saved PID
           rm server.pid  # Clean up the PID file
+      # Step 8: Upload Playwright HTML Report
+      - name: Upload Playwright HTML Report
+        if: always()  # Upload the report regardless of test outcomes
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
 
-      # Step 8: Check test result and report status
+  build:
+    runs-on: ubuntu-latest
+    needs: test  # This job depends on the test job
+
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # Step 2: Check test result and report status
       - name: Check test result and report status
         run: |
-          if [ "${{ env.TEST_RESULT }}" -eq 0 ]; then
+          if [ "${{ env.TEST_RESULT }}" == "0" ]; then
             echo "Playwright tests passed, proceeding with the build."
           else
-            echo "Playwright tests failed, stopping the workflow."
-            exit 1  # Exit with an error code to stop the workflow
+            echo "Playwright tests failed, skipping the build."
+            exit 0  # Exit successfully but skip the rest of the steps
           fi
-
-      # Step 9: Setup JFrog CLI for communication with JFrog Artifactory
+      # Step 3: Setup JFrog CLI for communication with JFrog Artifactory
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: ${{ secrets.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
-      # Step 10: Configure JFrog for npm repositories
+      # Step 4: Configure JFrog for npm repositories
       - name: Set CLI Config
         run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
 
-      # Step 11: Install project dependencies using npm and JFrog CLI
+      # Step 5: Install project dependencies using npm and JFrog CLI
       - name: Install Deps using JFrog CLI
         run: jf npm install
 
-      # Step 12: Build the project
+      # Step 6: Build the project
       - name: Build Project
         run: npm run build
 
-      # Step 13: Get current timestamp to use in file names
+      # Step 7: Get current timestamp to use in file names
       - name: Get Current Timestamp
         id: vars
         run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
-      # Step 14: Archive the build directory into a .tgz file with a timestamp
+      # Step 8: Archive the build directory into a .tgz file with a timestamp
       - name: Archive Artifacts into TGZ with Timestamp
         run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
 
-      # Step 15: Push the compressed .tgz file to JFrog Artifactory
+      # Step 9: Push the compressed .tgz file to JFrog Artifactory
       - name: Push Artifacts to JFrog
         run: |
           jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
-
-      # Step 16: Publish the npm package to JFrog Artifactory
+      # Step 10: Publish the npm package to JFrog Artifactory
       - name: Publish npm package
         run: jf npm publish
 
-      # Step 17: Publish build information to JFrog
+      # Step 11: Publish build information to JFrog
       - name: Publish Build info With JFrog CLI
         run: |
           jf rt build-collect-env
