--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,54 +4,54 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
       # Checkout the repository
       - name: Checkout
         uses: actions/checkout@v3
-
+        
       # Setup JFrog CLI for communication with JFrog Artifactory
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: ${{ secrets.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
-
+        
       # Setup Node.js for the project
       - name: Setup Node npm
         uses: actions/setup-node@v3
-
+        
       # Configure JFrog for npm repositories
       - name: Set CLI Config
         run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
-
+        
       # Install project dependencies using npm and JFrog CLI
       - name: Install Deps
         run: jf npm install
-
+        
       # Build the project
       - name: Build Project
         run: npm run build
-
+        
       # Get current timestamp to use in file names
       - name: Get Current Timestamp
         id: vars
         run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-
+        
       # Archive the build directory into a .tgz file with a timestamp
       - name: Archive Artifacts into TGZ with Timestamp
         run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
-
-      # Ensure only the desired directory is uploaded to JFrog Artifactory
+        
+      # Push the compressed .tgz file to JFrog Artifactory
       - name: Push Artifacts to JFrog
         run: |
-          # Only upload files from the 'cg-artifacts' directory to JFrog Artifactory
-          jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz" --exclude-patterns "**/.npm/**" --exclude-patterns "**/client/**"
-
+          # Only upload files from the 'cg-artifacts' directory to JFrog Artifactory and exclude unnecessary files
+          jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz" --exclusions "**/.npm/**;**/client/**"
+        
       # Publish the npm package to JFrog Artifactory
       - name: Publish
         run: jf npm publish
-
+        
       # Publish build information to JFrog
       - name: Publish Build info With JFrog CLI
         run: |
